--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bistro Boss Restaurant</title>
+    <title>Bistro Boss Project</title>
   </head>
   <body style="background-color: white;">
+
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
